[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/level_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/level_selection_scene.gd" type="Script" id=2]
[ext_resource path="res://paper_full.png" type="Texture" id=3]
[ext_resource path="res://Levels/ddx_decor.png" type="Texture" id=4]
[ext_resource path="res://Levels/chapter_1_decor.png" type="Texture" id=5]
[ext_resource path="res://Levels/Level_1/level.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Level_3/level.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level_2/level.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/freeplay_button.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/back_button1.png" type="Texture" id=10]
[ext_resource path="res://Levels/back_button2.png" type="Texture" id=11]

[node name="level_selection_scene" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_right = 1024
limit_bottom = 648

[node name="NinePatchRect" type="NinePatchRect" parent="Camera2D"]
margin_top = -174.0
margin_right = 1024.0
margin_bottom = 911.0
texture = ExtResource( 3 )
patch_margin_left = 25
patch_margin_top = 37
patch_margin_right = 27
patch_margin_bottom = 29
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="background_decor" type="Node2D" parent="."]

[node name="Chapter1Decor" type="Sprite" parent="background_decor"]
position = Vector2( 189, 193 )
rotation = -0.234393
texture = ExtResource( 5 )

[node name="DdxDecor" type="Sprite" parent="background_decor"]
position = Vector2( 732, 432 )
rotation = -0.396044
texture = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 515, 579, 509, 356, 429, 110, 577, -122, 419, -404, 548, -604, 379, -889, 645, -1066, 505, -1272, 569, -1474 )

[node name="level_button" parent="." instance=ExtResource( 1 )]
margin_left = 464.0
margin_top = 526.0
margin_right = 560.0
margin_bottom = 622.0
level_number = 1
level_attached = ExtResource( 6 )

[node name="level_button2" parent="." instance=ExtResource( 1 )]
margin_left = 464.0
margin_top = 301.0
margin_right = 560.0
margin_bottom = 397.0
level_number = 2
level_attached = ExtResource( 8 )

[node name="level_button3" parent="." instance=ExtResource( 1 )]
margin_left = 386.0
margin_top = 62.0
margin_right = 482.0
margin_bottom = 158.0
level_number = 3
level_attached = ExtResource( 7 )

[node name="level_button4" parent="." instance=ExtResource( 1 )]
margin_left = 533.0
margin_top = -167.0
margin_right = 629.0
margin_bottom = -71.0
level_number = 4

[node name="level_button5" parent="." instance=ExtResource( 1 )]
margin_left = 383.0
margin_top = -459.0
margin_right = 479.0
margin_bottom = -363.0
level_number = 5

[node name="level_button6" parent="." instance=ExtResource( 1 )]
margin_left = 506.0
margin_top = -658.0
margin_right = 602.0
margin_bottom = -562.0
level_number = 6

[node name="level_button7" parent="." instance=ExtResource( 1 )]
margin_left = 358.0
margin_top = -919.0
margin_right = 454.0
margin_bottom = -823.0
level_number = 7

[node name="level_button8" parent="." instance=ExtResource( 1 )]
margin_left = 581.0
margin_top = -1118.0
margin_right = 677.0
margin_bottom = -1022.0
level_number = 8

[node name="level_button9" parent="." instance=ExtResource( 1 )]
margin_left = 453.0
margin_top = -1310.0
margin_right = 549.0
margin_bottom = -1214.0
level_number = 9

[node name="level_button10" parent="." instance=ExtResource( 1 )]
margin_left = 526.0
margin_top = -1538.0
margin_right = 622.0
margin_bottom = -1442.0
level_number = 10

[node name="freeplay_button" parent="." instance=ExtResource( 9 )]
margin_left = 835.0
margin_top = -801.0
margin_right = 931.0
margin_bottom = -705.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 38.0
margin_top = 31.0
margin_right = 102.0
margin_bottom = 95.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
